--- a/android/res/layout/remote.xml
+++ b/android/res/layout/remote.xml
@@ -11,6 +11,9 @@
         <ImageButton android:layout_weight="1" android:layout_height="wrap_content" android:src="@drawable/play" android:layout_width="0dp" android:id="@+id/play_pause_button" android:layout_gravity="center_vertical"></ImageButton>
         <ImageButton android:layout_weight="1" android:layout_height="wrap_content" android:src="@drawable/next" android:layout_width="0dp" android:id="@+id/next_button" android:layout_gravity="center_vertical"></ImageButton>
     </TableRow>
+    <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow3" android:layout_height="wrap_content">
+        <ImageButton android:src="@drawable/reconnect" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_weight="1" android:layout_width="10dp" android:id="@+id/reconnect_button"></ImageButton>
+    </TableRow>
     <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_weight="1" android:layout_gravity="bottom">
         <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:text="status_text" android:id="@+id/status_label" android:layout_gravity="bottom"></TextView>
     </TableRow>
